--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ matplotlib = "^3.4.3"
 pandas = "^1.3.4"
 ipykernel = "^6.4.1"
 jupyter = "^1.0.0"
+pytest = "^6.2.5"
+qgrid = "^1.3.1"
 
 [tool.poetry.dev-dependencies]
 
