--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ ipykernel = "^6.4.1"
 jupyter = "^1.0.0"
 pytest = "^6.2.5"
 qgrid = "^1.3.1"
+black = "^21.11b1"
 
 [tool.poetry.dev-dependencies]
 
