--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ jupyter = "^1.0.0"
 pytest = "^6.2.5"
 qgrid = "^1.3.1"
 black = "^21.11b1"
+scikit-learn = "^1.0.1"
+sklearn = "^0.0"
 
 [tool.poetry.dev-dependencies]
 
