--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ ipykernel = "^6.4.1"
 jupyter = "^1.0.0"
 pytest = "^6.2.5"
 qgrid = "^1.3.1"
+scipy = [
+    {version = "^1.7", python = ">=3.8,<3.11"}
+]
+statsmodels = "^0.13.1"
 
 [tool.poetry.dev-dependencies]
 
