--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.6"
 click = "^8.0.3"
 matplotlib = "^3.4.3"
 pandas = "^1.3.4"
@@ -17,11 +17,16 @@ jupyter = "^1.0.0"
 pytest = "^6.2.5"
 qgrid = "^1.3.1"
 scipy = [
-    {version = "^1.7", python = ">=3.8,<3.11"}
+    {version = "^1.7", python = ">=3.7,<3.10"}
 ]
 statsmodels = "^0.13.1"
+fastapi = "^0.71.0"
+uvicorn = "^0.16.0"
 
 [tool.poetry.dev-dependencies]
+
+[tool.poetry.scripts]
+start = "microservice.main:start"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
